# whisper-streaming-wyoming

./: .gitignore  pyproject.toml
tests/: test_basic.py
wyoming_simul_whisper/: __main__.py  engine.py  handler.py
